--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "yotube-clone-2021",
   "version": "1.0.0",
   "description": "The best way to watch videos",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "win": "node index.js"
   },
   "repository": {
     "type": "git",
