--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "The best way to watch videos",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "win": "node index.js",
+    "dev": "nodemon --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
