--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The best way to watch videos",
   "scripts": {
     "win": "node index.js",
-    "dev": "nodemon --exec babel-node index.js"
+    "dev": "nodemon --exec babel-node src/server.js"
   },
   "repository": {
     "type": "git",
